fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@
 
   --bs: 0.25em 0.25em 0.75em rgba(0, 0, 0, 0.25),
     0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
-  overflow-x: hidden;
 }
 
 @media (min-width: 600px) {
@@ -55,6 +54,11 @@ body {
   font-family: var(--ff-primary);
   font-size: var(--fs-body);
   line-height: 1.6;
+  overflow-x: hidden;
+}
+
+.wrapper {
+  overflow-x: hidden;
 }
 
 section {
@@ -182,7 +186,7 @@ nav {
 
 .intro__img-me {
   height: 500px;
-  width: auto;
+  width: 50px;
   min-width: fit-content;
   margin: 0 auto;
   position: relative;
@@ -236,7 +240,7 @@ nav {
     max-height: 1000px;
     min-width: fit-content;
     margin: 0 auto;
-    left: 300px;
+    left: 10em;
     bottom: 150px;
     filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.25));
     z-index: 2;
